src/main/metadata/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Dealer_Case_SubType__c</fullName>
        <label>Dealer Case SubType</label>
        <picklist>
            <controllingField>Dealer_Case_Type__c</controllingField>
            <picklistValues>
                <fullName>Sales Calls/SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics Arrangement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality of Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Event Services Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Center Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality of Reception Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality of Maintenance &amp; Mechanical Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality of Body &amp; Paint Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost of Service &amp; Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality of Roadside Assistance Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reception Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality of Sales Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality of Service Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Showroom Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Technicial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality of Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality of Pre-Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality of Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality of Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duration of Parts Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Liability - Fire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Liability - Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Case_Type__c</fullName>
        <label>Dealer Case Type</label>
        <picklist>
            <controllingField>Dealer_Case_Category__c</controllingField>
            <picklistValues>
                <fullName>Marketing Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service &amp; Repair Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical &amp; Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts &amp; Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leasing Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Contact__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Complainant refused dealer contact 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Dealer Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Feedback__c</fullName>
        <label>Dealer Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Provides_Transport__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Flag whether the dealer provides transport for complainant 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Courtesy car provided by dealer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Settlement_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dealer Settlement Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Defective_Item__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Defective Item of the complaint 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Defective Item</label>
        <picklist>
            <picklistValues>
                <fullName>0=Overall Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Chassis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3=Body</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4=Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defective_SubItem__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Defective sub-item of the complaint 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Defective SubItem</label>
        <picklist>
            <controllingField>Defective_Item__c</controllingField>
            <picklistValues>
                <fullName>Overall Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engine, Crankcase ventilation, Cylinder Head, Crankcase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driving Mechanism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engine Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixer Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Intake, Booster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhaust Manifold, Exhaust Brake, Waste Gas Purification Apparatus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric Device of Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engine Lubrication, Engine Oil Cooling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engine Cooling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engine Suspension Device</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Mount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel Oil System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhaust Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wiring, Device and instrument</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Transmission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Transmission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pedal System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frame, Belt Driving Trailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front Axle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rear Axle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wheel, Measuring A Chassis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transmission Shaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brake Hydraulic Mechanism and a Mechanical Mechanism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steering Device</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Outline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department_Lead__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Department lead of complaint 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Department Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Department of complaint 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>CG Other department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CG After-sales department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CG fittings department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CG Technical department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CG Sales department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes Other department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes After-sales department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes fittings department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes Technical department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes Sales department</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DescriptionOne__c</fullName>
        <label>Description 1</label>
        <length>128000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Description Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Details_for_customer_owned_MB_vehicle__c</fullName>
        <label>Details for customer owned MB vehicle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Status__c</fullName>
        <label>Distribution Status</label>
        <picklist>
            <picklistValues>
                <fullName>Waiting for transmission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EU_VIN__c</fullName>
        <label>EU FIN</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Status__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: State of sent mail 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Email Status</label>
        <picklist>
            <picklistValues>
                <fullName>0=Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Returned Undeliverable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3=Not required to send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4=Not Sent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Engine_Number__c</fullName>
        <label>Engine Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineer__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: The engineer (at the call center) responsible for providing technical consultance 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Engineer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equal_to_Case_Dealer__c</fullName>
        <description>This field is for capturing case dealer ID for workflow, as Case dealer is a look up field which is can not be selected in the creteria field list.</description>
        <formula>Case_Dealer__r.Id</formula>
        <label>Equal to Case Dealer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalate_Date_to_CO__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Date when the case was escalated to CO 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Escalate Date to CO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalate_Date_to_RO__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Date when the case was escalated to RO 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Escalate Date to RO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalation__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Escalation level of complaint 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Escalation</label>
        <picklist>
            <picklistValues>
                <fullName>0=Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Regional Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Central Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3=None</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Escalation_to_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Escalation to (Related dept)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Escalation to (Related dept))</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost__c</fullName>
        <label>Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Case_ID__c</fullName>
        <label>External Case ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Created_Date__c</fullName>
        <label>External Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Source__c</fullName>
        <label>External Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FFPSubEscCO__c</fullName>
        <label>FFPSubEscCO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FFPSubEscRO__c</fullName>
        <formula>FFPositionDate__c - Escalate_Date_to_RO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FFPSubEscRO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FFPositionDate__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: First Final Position Release Date 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>FFPositionDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FOS_Case_Link__c</fullName>
        <formula>HYPERLINK("javascript:if(typeof(srcUp)=='function') {srcUp('/" &amp; Id &amp; "?isdtp=vw');}"+ " else {window.location.href='/" &amp; Id &amp; "?isdtp=vw'}", FOS_Case_Number__c, "_self" )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOS Case Number Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOS_Case_Number__c</fullName>
        <label>FOS Case Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Famous_Person__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Famous Person</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feedback_Date__c</fullName>
        <label>Feedback Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feedback_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feedback Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feedback_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Required to have feedback flag 
Used in: Page Layouts, Reports 

Modify History 
Modify By: Tony Liu
Modify Reason: Chane Field Name&amp; Label
*/</description>
        <label>Feedback Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feedback_to_CAC_New__c</fullName>
        <label>Feedback to CAC</label>
        <picklist>
            <picklistValues>
                <fullName>Handling by Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done by Dealer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Feedback_to_CAC__c</fullName>
        <label>Feedback to CAC(Text)</label>
        <length>1025</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Final__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Is the final complaint for this problem 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Final</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_OB_By__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: First outbound contact person 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>First OB By</label>
        <picklist>
            <picklistValues>
                <fullName>0=Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Regional Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Central Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3=None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_OB_Date__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: First outbound date 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>First OB Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_Up_After_Repair__c</fullName>
        <label>Follow Up After Repair</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Inquiry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Follow Up Inquiry</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fourth_OB_By__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Fourth outbound contact person 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Fourth OB By</label>
        <picklist>
            <picklistValues>
                <fullName>0=Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Regional Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Central Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3=None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fourth_OB_Date__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Fourth outbound date 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Fourth OB Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>General_Manager__c</fullName>
        <formula>( Case_Dealer__r.Dealer_General_Manager_Email__c )</formula>
        <label>General Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goodwill_Category__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function:Type of goodwill given to complainant 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Goodwill Category</label>
        <picklist>
            <picklistValues>
                <fullName>Own Goodwill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Market Goodwill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade-in</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goodwill_Cost__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Cost attached to goodwill given to complainant 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Goodwill Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Goodwill_Details__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Details of goodwill given to complainant 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Goodwill Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Government_Background_Related__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Government Background Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Government_Background__c</fullName>
        <label>Any gov. related BG of owner &amp;  relative</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group_Type__c</fullName>
        <label>Group Type</label>
        <picklist>
            <picklistValues>
                <fullName>Agent Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arrangement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bodybuild concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Explanation was not given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardship declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Veda listing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment arrangement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payout/Payment Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repossession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residual/Misunderstand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Varation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Handling_Level__c</fullName>
        <label>Handling Level</label>
        <picklist>
            <picklistValues>
                <fullName>Central Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Info_Source__c</fullName>
        <label>Info Source</label>
        <picklist>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web/Mobile Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper/Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Exhibition Hall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>